# kuni

./: .clang-format  CMakeLists.txt  README.md  docker-compose.yml  ollama_setup.sh
src/: App.cpp  App.h  AppBase.cpp  AppBase.h  Diary.cpp  Diary.h  Endpoint.h  OpenAIChat.cpp  OpenAIChat.h  OpenAITools.cpp  OpenAITools.h  config.h  main.cpp
src/telegram/: TelegramClient.cpp  TelegramClient.h  telegram.cpp  telegram.h
src/ui/debug/: Diary.cpp  DiaryQueryAI.cpp
tests/: DairyTest.cpp  OpenAIChatTest.cpp  TelegramTests.cpp
